<resources>
    <string name="app_name">Happy_Plants</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="your_plants">Your Plants</string>
    <string name="add_a_plant_title">Add a plant !</string>
    <string name="add_a_plant_description">Let\'s add a plant to your collection !</string>
    <string name="plant_name">Plant name</string>
    <string name="add_a_plant">Add a plant</string>
    <string name="plant_image">plant image</string>
    <string name="ficus">Ficus</string>
    <string name="choose_a_plant_name">Choose a plant name:</string>
    <string name="choose_a_plant_type">Choose a plant type:</string>
    <string name="analyze">Analyze !</string>
    <string name="luminosity">Luminosity</string>
    <string name="_0_lux">0 lx</string>
    <string name="_0_c">0.0 °C</string>
    <string name="temperature">Temperature</string>
    <string name="_0">0 %</string>
    <string name="humidity">Humidity</string>
    <string name="save">Save</string>
    <string name="plant_name_details_page">plant name</string>
    <string name="delete_plant">Delete plant</string>
    <string name="hapiness_percentage">0 %</string>
    <string name="plant_happiness_title">Plant happiness</string>
    <string name="plant_category">plant category</string>
    <string name="water_your_plant_in">Water your plant</string>
    <string name="_3_days">3 days</string>
    <string name="water_plant">Water plant</string>
    <string name="last_watering_data">Last watering was on 00/00/0000</string>
    <string name="empty_grid">Add a plant to your collection by clicking the button below</string>
    <string name="room_information_s">Room information\'s</string>
    <string name="your_mobile_phone_is_not_equipped_with_required_sensors">Your mobile phone is not equipped with required sensors</string>
    <string name="luminosity_on_the_plant">Luminosity on the plant</string>
    <string name="temperature_of_the_room_c">Temperature of the room (°C)</string>
    <string name="temperature_of_the_room">Temperature of the room (°C)</string>
    <string name="temperature_of_the_room_unit">Temperature of the room (°C)</string>
    <string name="room_unit">Temperature of the room (°C)</string>
    <string name="update">Update</string>
    <string name="plant_data">Plant data</string>
    <string name="plant_happiness_last_10_updates">Plant data last 10 updates</string>
    <string name="details">Details</string>
</resources>