<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luminosity"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/luminosity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_lux"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_c"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/humidity"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/plant_happiness_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/happiness"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/hapiness_percentage"
        android:textColor="@color/black"
        android:textSize="18sp"
        />
</LinearLayout>