<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/go_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/left_chevron"
            />
        <ImageView
            android:id="@+id/plant_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="-60dp"
            android:padding="20dp"
            android:src="@drawable/plant_default"
            android:background="@drawable/custom_banner"
            android:contentDescription="@string/plant_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/plant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_name_details_page"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/plant_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:text="@string/plant_category"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <include layout="@layout/plant_details_data" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            <Button
                android:id="@+id/update_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:background="@drawable/custom_button"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:text="@string/update"
                tools:ignore="RtlHardcoded" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/graph_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@drawable/custom_button"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:text="@string/details"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_banner"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:color="@color/black"
                android:text="@string/water_your_plant_in"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/next_watering"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_3_days"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/last_watering"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/last_watering_data"
                android:textSize="16sp"
                android:textStyle="italic"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:padding="20dp">
            <Button
                android:id="@+id/water_plant_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|left"
                android:textAllCaps="false"
                android:background="@drawable/custom_button"
                android:textColor="@color/black"
                android:text="@string/water_plant"
                tools:ignore="RtlHardcoded" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/delete_plant_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|right"
                android:textAllCaps="false"
                android:background="@drawable/custom_delete_button"
                android:textColor="@color/black"
                android:text="@string/delete_plant"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>