<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/go_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/left_chevron"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top|center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_plant_title"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="23sp"
                android:textStyle="bold"
                />
            <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="top|center"
                tools:context=".add_plant_activity.PlantForm">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_plant_description"
                    android:textColor="@color/black"
                    android:layout_marginTop="40dp"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_a_plant_name"
                    android:textColor="@color/black"
                    android:layout_marginTop="40dp"
                    android:textSize="14sp"
                    />
                <EditText
                    android:id="@+id/plant_name"
                    android:background="@drawable/custom_text_input"
                    android:layout_height="50sp"
                    android:layout_width="250sp"
                    android:padding="15sp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/plant_name"
                    android:inputType="text"
                    android:autofillHints="false"
                    android:cursorVisible="false"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_a_plant_type"
                    android:textColor="@color/black"
                    android:layout_marginTop="40dp"
                    android:textSize="14sp"
                    />
                <Spinner
                    android:id="@+id/plant_category_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="250sp"
                    android:layout_marginTop="20dp"
                    android:padding="15sp"
                    android:background="@drawable/custom_spinner"
                    android:entries="@array/plant_types"
                    tools:context=".add_plant_activity.AddPlant"
                    />
                <Button
                    android:id="@+id/analyze_plant_button"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_margin="40dp"
                    android:layout_gravity="center|bottom"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:text="@string/analyze" />
                <include layout="@layout/plant_details_data" />
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_banner"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    />
                <Button
                    android:id="@+id/save_plant_button"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:enabled="false"
                    android:layout_margin="40dp"
                    android:layout_gravity="center|bottom"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:contextClickable="false"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>