<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/welcome_back"
            android:textSize="23sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_plants"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginTop="30sp"
            android:textColor="@color/black"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <GridView
                    android:id="@+id/plant_grid"
                    android:numColumns="2"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginTop="20dp"
                    tools:ignore="NestedScrolling" />
            </RelativeLayout>
        </ScrollView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/empty_grid_view"
                android:layout_width="fill_parent"
                android:layout_height="450dp"
                android:text="@string/empty_grid"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:gravity="center|center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:gravity="bottom|center">
            <Button
                android:id="@+id/add_plant_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:textAllCaps="false"
                android:background="@drawable/custom_button"
                android:textColor="@color/black"
                android:text="@string/add_a_plant" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>