<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/go_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/left_chevron"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top|center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_information_s"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="23sp"
                android:textStyle="bold"
                />
            <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="top|center"
                tools:context=".add_plant_activity.PlantForm">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_mobile_phone_is_not_equipped_with_required_sensors"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_banner"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/luminosity_on_the_plant"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:id="@+id/luminosity_picker"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_banner"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_of_the_room_unit"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:id="@+id/temperature_picker"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_banner"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room_unit"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:id="@+id/humidity_picker"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/save_data_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="40dp"
                android:layout_gravity="center|bottom"
                android:background="@drawable/custom_button"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:contextClickable="false"
                android:text="@string/save" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>